--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@midudev/tailwind-animations": "^0.0.7",
     "@vitejs/plugin-react": "^4.2.1",
+    "clsx": "^2.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.2.1",
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.21",
